--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,4 @@
+
 name: Run Tests
 
 on:
@@ -28,7 +29,7 @@ jobs:
 
     - name: 🧪 Run tests (skip prediction test)
       run: |
-        pytest tests/test_api.py -v -k "not predict"
+        pytest app/tests/test_api.py -v -k "not predict"
 
     - name: ✅ Tests completed
       if: success()
