--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,4 @@
 name: Run Tests
-
 on:
   push:
     branches: [ main, develop, feature/* ]
@@ -10,32 +9,32 @@ jobs:
   test:
     name: Run API Tests
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name:  Set up Python 3.11
+      
+    - name: Set up Python 3.11
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         cache: 'pip'
-
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+        
     - name: Run tests
       env:
         PYTHONPATH: ${{ github.workspace }}
       run: |
-        pytest app/tests/test_api.py -v -k "not predict"
-
+        pytest app/tests/test_api.py -v
+        
     - name: Tests completed
       if: success()
       run: echo "All tests passed successfully!"
-
+      
     - name: Tests failed
       if: failure()
-      run: echo " Some tests failed. Please check the logs above."
+      run: echo "Some tests failed. Please check the logs above."
