--- a/ML/.github/workflows/test.yml
+++ b/ML/.github/workflows/test.yml
@@ -1,35 +1,31 @@
 name: Run Tests
-
 on:
   push:
     branches: [ main, develop, feature/* ]
   pull_request:
     branches: [ main, develop ]
-
 jobs:
   test:
     name: Run API Tests
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./ML
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name:  Set up Python 3.11
+    - name: Set up Python 3.11
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         cache: 'pip'
-
+        cache-dependency-path: 'ML/requirements.txt'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
     - name: Run tests
       env:
-        PYTHONPATH: ${{ github.workspace }}
+        PYTHONPATH: ${{ github.workspace }}/ML
       run: |
         pytest -s test.py
-
-   
