--- a/ML/.github/workflows/test.yml
+++ b/ML/.github/workflows/test.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
     branches: [ main, develop ]
 jobs:
-  test:
-    name: Run API Tests
+  test-ml:
+    name: Run ML Tests
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -24,8 +24,33 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run tests
+    - name: Run ML tests
       env:
         PYTHONPATH: ${{ github.workspace }}/ML
       run: |
         pytest -s test.py
+
+  test-app:
+    name: Run App Tests
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./app
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+        cache: 'pip'
+        cache-dependency-path: 'requirements.txt'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ../requirements.txt
+    - name: Run App tests
+      env:
+        PYTHONPATH: ${{ github.workspace }}/app
+      run: |
+        pytest -s
